--- a/SAMT-Admin-Panel/Pages/_Layout.cshtml
+++ b/SAMT-Admin-Panel/Pages/_Layout.cshtml
@@ -9,13 +9,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <base href="~/" />
     
-    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
-    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
-    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
-    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
-    <link rel="icon" type="image/jpeg" sizes="2048x2048" href="assets/img/26685360_1706779776011918_7417484836277580095_o.jpg?h=edfea55aa51e12dfb57c2d27e3587f8b">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/samt_krone_PNG.png?h=fc9dabeffe8c0cc3477e8ab02293766e">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/samt_krone_PNG.png?h=fc9dabeffe8c0cc3477e8ab02293766e">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/samt_krone_PNG.png?h=fc9dabeffe8c0cc3477e8ab02293766e">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/samt_krone_PNG.png?h=fc9dabeffe8c0cc3477e8ab02293766e">
+    <link rel="icon" type="image/png" sizes="2000x2000" href="assets/img/samt_krone_PNG.png?h=fc9dabeffe8c0cc3477e8ab02293766e">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=d2918ce175b06910050faab4289953ff">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=a24cb0112e51902b6b3ed4606a7cd727">
+    <link rel="stylesheet" href="assets/css/Navbar-Centered-Brand-Dark.css?h=befd8a398792e305b7ffd4a176b5b585">
     <link rel="stylesheet" href="assets/css/styles.css?h=d41d8cd98f00b204e9800998ecf8427e">
+    
+    <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
     
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
@@ -38,6 +42,8 @@
     
 <script src="_content/Blazor-ApexCharts/js/apex-charts.min.js"></script>
 <script src="_content/Blazor-ApexCharts/js/blazor-apex-charts.js"></script>
+
+<script src="_content/AntDesign/js/ant-design-blazor.js"></script>
 
 <script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
