--- a/SAMT-Admin-Panel/Pages/Index.razor
+++ b/SAMT-Admin-Panel/Pages/Index.razor
@@ -75,7 +75,7 @@
     @*<div class="text-white bg-secondary border rounded border-0 p-4 p-lg-5 py-4 py-xl-5">*@
         @foreach (var (chart, value) in chartControl.OrderBy(x => x.Key))
         {
-            <Drawer Closable="true" Width="720" Visible="value.First" Placement="right" Title='("Configure chart #" + chart)' OnClose="() => { chartControl[chart].First = !chartControl[chart].First; StateHasChanged(); value.Fourth.RenderAsync(); StateHasChanged();}">
+            <Drawer Closable="true" Width="720" Visible="value.First" Placement="right" Title='("Configure chart #" + chart)' OnClose="() => { chartControl[chart].First = !chartControl[chart].First; StateHasChanged(); value.Fourth.Render(); StateHasChanged();}">
                 <div class="table table-striped">
                     <table class="table">
                         <thead>
@@ -167,7 +167,7 @@
                                                              Items="@context.Sales.Where(x => x.FkEvent.Equals(selectedEvent) && x.FkProductId == line.First)"
                                                              Name="@context.Products.First(x => x.Id == line.First).Name"
                                                              SeriesType="value.Third"
-                                                             XValue="@(sale => sale.DateTime.ToString("hh:mm"))"
+                                                             XValue="@(sale => sale.DateTime.ToString("HH:mm"))"
                                                              YAggregate="sales => sales.Count()"/>
                                         }
                                     </ApexChart>
