Added downloads page with all logos and masktos Updated dependencies

--- a/SAMT-Website/Pages/_Host.cshtml
+++ b/SAMT-Website/Pages/_Host.cshtml
@@ -58,14 +58,16 @@
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/android-chrome-192x192.png?h=8f0d7f118b827e465480d098f7d39318">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/android-chrome-192x192.png?h=8f0d7f118b827e465480d098f7d39318">
     <link rel="icon" type="image/png" sizes="192x192" href="assets/img/android-chrome-192x192.png?h=8f0d7f118b827e465480d098f7d39318">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=3089035c47e797512abdd7ac9638e487">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=37efe7e508357f382d0a5b2b73cd47ee">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css?h=37efe7e508357f382d0a5b2b73cd47ee">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=d6708c07df622a08ba4689f9b3e1a4ce">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css?h=a0e894d2f295b40fda5171460781b200">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css?h=a0e894d2f295b40fda5171460781b200">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css?h=6fd900423297e690e0f2ff0372fc3ee6">
+    <link rel="stylesheet" href="assets/css/Projects-Grid.css?h=4f3cfa46e40e236365345fc77963f4b8">
     <link rel="stylesheet" href="assets/css/Simple-Slider.css?h=da830b6503e0457b5735b0129f20b163">
     <link rel="stylesheet" href="assets/css/Team-Boxed.css?h=82bbec4cae98efe5fc4bdd3d9d621fc2">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css?h=e737f76df021b46fa7180f48799a5d20">
@@ -95,16 +97,16 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/smart-forms.min.js?h=220695d33937f0c1d9977599320bf21d"></script>
-    <script src="assets/js/bs-init.js?h=7563c52cc0a72a92d96ce0159b71241c"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="assets/js/vanilla-zoom.js?h=6a37ea9c996b05f763161c73127d66bc"></script>
-    <script src="assets/js/theme.js?h=a083aeb15550c5e1266c666e8a5846d9"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
-    <script src="assets/js/Lightbox-Gallery.js?h=64eb55ccbc6ead5e91ebe308caacba6e"></script>
-    <script src="assets/js/Simple-Slider.js?h=84b1d7cbf88bb21b37fb412ca8f94640"></script>
+<script src="assets/js/jquery.min.js?h=84e399b8f2181ccd73394fdeddff1638"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js?h=5488c86a1260428f0c13c0f8fb06bf6a"></script>
+<script src="assets/js/bs-init.js?h=7563c52cc0a72a92d96ce0159b71241c"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.11.1/baguetteBox.min.js"></script>
+<script src="assets/js/vanilla-zoom.js?h=6a37ea9c996b05f763161c73127d66bc"></script>
+<script src="assets/js/theme.js?h=a083aeb15550c5e1266c666e8a5846d9"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
+<script src="assets/js/Lightbox-Gallery.js?h=64eb55ccbc6ead5e91ebe308caacba6e"></script>
+<script src="assets/js/Simple-Slider.js?h=84b1d7cbf88bb21b37fb412ca8f94640"></script>
 
     <script src="_framework/blazor.server.js"></script>
 </body>
