--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -7,6 +7,7 @@
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="guests"><i class="fas fa-users" style="transform: scale(2);padding-right: 10px;"></i>Gäste</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="gallery"><i class="fas fa-images" style="transform: scale(2);padding-right: 10px;"></i>Galerie</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="about-us"><i class="fas fa-info-circle" style="transform: scale(2);padding-right: 10px;"></i>Über uns</NavLink></li>
+                <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="downloads"><i class="fas fa-download" style="transform: scale(2);padding-right: 10px;"></i>Downloads</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="contact-us"><i class="fas fa-question-circle" style="transform: scale(2);padding-right: 10px;"></i>Kontakt</NavLink></li>
                 <li class="nav-item" data-bss-hover-animate="pulse">
                     <a class="nav-link" href="https://discord.gg/QHC3UE9" target="_blank">
