--- a/SAMT-Website/Pages/Downloads.razor
+++ b/SAMT-Website/Pages/Downloads.razor
@@ -1,127 +1,90 @@
 ﻿@page "/downloads"
 
 <div class="container py-4 py-xl-5">
-    <div class="row mb-5">
-        <div class="col-md-8 col-xl-6 text-center mx-auto">
-            <h2>Aktuelle SAMT Logos</h2>
-            <p class="w-lg-50">Hier findet ihr alle unsere Logos zum herunterladen.<br>Diese dürfen überall und ohne Nachfrage verwendet werden. Wir freuen uns immer unser Logo irgendwo zu entdecken :)</p>
+        <div class="row mb-5">
+            <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <h2>Aktuelle SAMT Logos</h2>
+                <p class="w-lg-50">Hier findet ihr alle unsere Logos zum herunterladen.<br>Diese dürfen überall und ohne Nachfrage verwendet werden. Wir freuen uns immer unser Logo irgendwo zu entdecken :)</p>
+            </div>
         </div>
-    </div>
-    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/SAMT_Logo_-_Kopie2.png?h=b4449d2a4af33ff0421fb733604f4b9d">
-                <div class="py-4">
-                    <h4>Standard Logo</h4>
-                    <p>Dies ist unsere aktuelles Logo, welches wir für z. B. unsere Flyer verwenden.</p>
+        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 text-center">
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/SAMT_Logo_-_Kopie2.png?h=b4449d2a4af33ff0421fb733604f4b9d">
+                    <div class="py-4">
+                        <h4>Standard Logo</h4>
+                        <p>Dies ist unsere aktuelles Logo, welches wir für z. B. unsere Flyer verwenden.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/SAMT_Logo_Spring.png?h=7c867b5bdc2dd822681b846cee3c2489">
+                    <div class="py-4">
+                        <h4>Frühjahrs Logo</h4>
+                        <p>Eines unserer leicht thematisierten Logos. Dieses kommt immer im Frühjahr/Frühling zum Einsatz.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/WinterSAMT.png?h=55bf114ce420b29d02a1a5a9df17cb68">
+                    <div class="py-4">
+                        <h4>Winter Logo</h4>
+                        <p>Unser winterliches Logo mit unserem süßen Maskottchen "Samantha" ^^</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/samt_krone_PNG.png?h=b5f3a2294efd2dbdb7d728e3252b2069">
+                    <div class="py-4">
+                        <h4>Standard SAMT Krone</h4>
+                        <p>Die Krone verwenden wir überall wo das große Logo nicht passt oder verwenden Sie als Sticker ^^</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/SAMT_Logo_Spring.png?h=7c867b5bdc2dd822681b846cee3c2489">
-                <div class="py-4">
-                    <h4>Frühjahrs Logo</h4>
-                    <p>Eines unserer leicht thematisierten Logos. Dieses kommt immer im Frühjahr/Frühling zum Einsatz.</p>
-                </div>
+    </div><!-- End: Projects Grid -->
+    <hr style="margin-right: 50px;margin-left: 50px;height: 3px;"><!-- Start: Projects Grid -->
+    <div class="container py-4 py-xl-5">
+        <div class="row mb-5">
+            <div class="col-md-8 col-xl-6 text-center mx-auto">
+                <h2>Maskottchen</h2>
+                <p class="w-lg-50">Wir stellen vor: Samantha!</p>
             </div>
         </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/WinterSAMT.png?h=55bf114ce420b29d02a1a5a9df17cb68">
-                <div class="py-4">
-                    <h4>Winter Logo</h4>
-                    <p>Unser winterliches Logo mit unserem süßen Maskottchen "Samantha" ^^</p>
+        <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3 text-center">
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/Samantha%20Groß.png?h=06565ccbca3071c5518d0a9e0f3b3cdf">
+                    <div class="py-4">
+                        <h4>Samantha Groß</h4>
+                        <p></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/samt_krone_PNG.png?h=b5f3a2294efd2dbdb7d728e3252b2069">
-                <div class="py-4">
-                    <h4>Standard SAMT Krone</h4>
-                    <p>Die Krone verwenden wir überall wo das große Logo nicht passt oder verwenden Sie als Sticker ^^</p>
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/Samantha%20klein.png?h=081084a5ffd71e5a0c71d51df64476ce">
+                    <div class="py-4">
+                        <h4>Samantha Klein</h4>
+                        <p></p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<hr style="margin-right: 50px;margin-left: 50px;height: 3px;">
-<div class="container py-4 py-xl-5">
-    <div class="row mb-5">
-        <div class="col-md-8 col-xl-6 text-center mx-auto">
-            <h2>Maskottchen</h2>
-            <p class="w-lg-50">Wir stellen vor: Samantha!</p>
-        </div>
-    </div>
-    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/Samantha%20Groß.png?h=06565ccbca3071c5518d0a9e0f3b3cdf">
-                <div class="py-4">
-                    <h4>Samantha Groß</h4>
-                    <p></p>
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/samt%20big%20maskot.png?h=344d87b40f64a355d9248a6a6f8b0285">
+                    <div class="py-4">
+                        <h4>Alte Samantha Groß</h4>
+                        <p></p>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/Samantha%20klein.png?h=081084a5ffd71e5a0c71d51df64476ce">
-                <div class="py-4">
-                    <h4>Samantha Klein</h4>
-                    <p></p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/samt%20big%20maskot.png?h=344d87b40f64a355d9248a6a6f8b0285">
-                <div class="py-4">
-                    <h4>Alte Samantha Groß</h4>
-                    <p></p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/samt%20small%20maskot.png?h=9c9630e07323329079b38797842d230a">
-                <div class="py-4">
-                    <h4>Alte Samantha Klein</h4>
-                    <p></p>
+            <div class="col">
+                <div><img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/samt%20small%20maskot.png?h=9c9630e07323329079b38797842d230a">
+                    <div class="py-4">
+                        <h4>Alte Samantha Klein</h4>
+                        <p></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<hr style="margin-right: 50px;margin-left: 50px;height: 3px;">
-<div class="container py-4 py-xl-5">
-    <div class="row mb-5">
-        <div class="col-md-8 col-xl-6 text-center mx-auto">
-            <h2>Alte SAMT Logos</h2>
-            <p class="w-lg-50">Dies sind unsere alten Logos. Diese werden nicht mehr verwendet. Ihr könnt Sie zwar verwenden, sind aber nicht mehr aktuell.</p>
-        </div>
-    </div>
-    <div class="row gy-4 row-cols-1 row-cols-md-2 row-cols-xl-3">
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/13133315_1104199109603324_6208087546453975968_n.jpg?h=c98928316880cdd4d2b48342b6df7f90">
-                <div class="py-4">
-                    <h4>Altes Standard Logo</h4>
-                    <p>Unser altes Logo, wird heute nicht mehr verwendet.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div>
-                <img class="rounded img-fluid d-block w-100 fit-cover" src="assets/img/AltWinterSAMT.jpg.png?h=62238294fd4ef5f2cc52f83b7e660368">
-                <div class="py-4">
-                    <h4>Altes Winter Logo</h4>
-                    <p>Das alte Winter Logo in schlechter Auflösung.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 
 @code {
 
