Fixed some formatting Removed unused css

--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -104,7 +104,7 @@
                                 </svg>
                             </div>
                             <h5 class="fw-bold card-title">Familiär</h5>
-                            <p class="text-muted card-text mb-4">Auch wenn wir immer stetig wachsen, bleiben wir eine große Familie und wollen euch eine gemütliches Treff mit Con-Feeling bieten.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                            <p class="text-muted card-text mb-4">Auch wenn wir immer stetig wachsen, bleiben wir eine große Familie und wollen euch eine gemütliches Treff mit Con-Feeling bieten.</p>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                                 </svg>
                             </div>
                             <h5 class="fw-bold card-title">Bühnenprogramm</h5>
-                            <p class="text-muted card-text mb-4">Auch wir bieten euch einzigartiges Bühnenprogramm zum mitmachen, was ihr so auf den großen Cons, sicher noch nicht gesehen habt!</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                            <p class="text-muted card-text mb-4">Auch wir bieten euch einzigartiges Bühnenprogramm zum mitmachen, was ihr so auf den großen Cons, sicher noch nicht gesehen habt!</p>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                                 </svg>
                             </div>
                             <h5 class="fw-bold card-title">Artist Alley &amp; Händler</h5>
-                            <p class="text-muted card-text mb-4">Auch wenn es vielleicht nicht viele sind, laden wir immer gerne einzigartige Künstler und Händler zu uns ein.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                            <p class="text-muted card-text mb-4">Auch wenn es vielleicht nicht viele sind, laden wir immer gerne einzigartige Künstler und Händler zu uns ein.</p>
                         </div>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                                 </svg>
                             </div>
                             <h5 class="fw-bold card-title">Workshops</h5>
-                            <p class="text-muted card-text mb-4">Erlerne wie du einen Anime synchronisierst oder erschaffe neue Props um dein Cosplay noch besser zu machen.</p><button class="btn btn-primary shadow" type="button">Learn more</button>
+                            <p class="text-muted card-text mb-4">Erlerne wie du einen Anime synchronisierst oder erschaffe neue Props um dein Cosplay noch besser zu machen.</p>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
         <div class="row mb-5">
             <div class="col-md-8 col-xl-6 text-center mx-auto">
                 <p class="fw-bold text-success mb-2">Empfehlungen</p>
-                <h2 class="fw-bold"><strong>What People Say About us</strong></h2>
+                <h2 class="fw-bold"><strong>Was Besucher über uns sagen</strong></h2>
                 <p class="text-muted w-lg-50">Wir lieben euch alle! Danke, dass ihr uns unterstützt &lt;3</p>
             </div>
         </div>
