--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -309,10 +309,10 @@
         {
             await Task.Delay(1000);
             var countdown = samt.Subtract(DateTime.Now);
-            _days = countdown.Days.ToString("##");
-            _hours = countdown.Hours.ToString("##");
-            _minutes = countdown.Minutes.ToString("##");
-            _seconds = countdown.Seconds.ToString("##");
+            _days = countdown.Days.ToString("D2");
+            _hours = countdown.Hours.ToString("D2");
+            _minutes = countdown.Minutes.ToString("D2");
+            _seconds = countdown.Seconds.ToString("D2");
             StateHasChanged();
         }
     }
