--- a/SAMT-Website/Pages/Index.razor
+++ b/SAMT-Website/Pages/Index.razor
@@ -289,7 +289,7 @@
 </section><!-- End: Contact Details -->
 @code
 {
-    readonly CultureInfo _culture = new("de-DE");
+    readonly CultureInfo _culture = new("de-DE", true);
 
     string _days = string.Empty;
     string _hours = string.Empty;
