--- a/SAMT-Website/Shared/NavMenu.razor
+++ b/SAMT-Website/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
         <NavLink Match="NavLinkMatch.All" class="navbar-brand d-flex flex-column align-items-xxl-center" href="/"><span class="bs-icon-lg d-flex justify-content-center align-items-center me-2 bs-icon" style="color: rgb(255,255,255);"><img class="img-fluid" src="assets/img/Logos/Krone.png">&nbsp;SAMT</span><small style="padding-top: 5px;">Siegener Anime und Manga Treff</small></NavLink><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navcol-1">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="index">Start</NavLink></li>
+                <li class="nav-item"><NavLink ActiveClass="active" Match="NavLinkMatch.All" class="nav-link" href="/">Start</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="whenwhere">Wann & Wo?</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="pricing">Tickets & Preise</NavLink></li>
                 <li class="nav-item"><NavLink ActiveClass="active" class="nav-link" href="contact">Kontakt</NavLink></li>
