--- a/SAMT-Website/Pages/_Layout.cshtml
+++ b/SAMT-Website/Pages/_Layout.cshtml
@@ -70,6 +70,12 @@
 
 <script src="_framework/blazor.server.js"></script>
 
+<script>
+        navigatorLanguages = function () {
+            return navigator.languages;
+        }
+</script>
+
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/js/smart-forms.min.js"></script>
